# qiskit-metal

./: .buildinfo  .gitignore  README_HEADLESS.md  changelog.md  contributor-guide.html  faq.html  genindex.html  index.html  installation.html  overview.html  py-modindex.html  pyproject.toml  qiskit_metal.analyses.em.cpw_calculations.html  qiskit_metal.analyses.quantization.lumped_capacitive.html  search.html  searchindex.js  tox.ini  videoseducation.html  workflow.html
.doctrees/: contributor-guide.doctree  index.doctree
.github/workflows/: bump-version.yml  docs.yml  release.yml
_modules/: index.html
_modules/addict/: addict.html
_modules/matplotlib/: backend_bases.html
_modules/matplotlib/backends/: backend_agg.html  backend_qt.html  backend_qtagg.html
_modules/qiskit_metal/_gui/: main_window.html  main_window_base.html
_modules/qiskit_metal/designs/: design_base.html  design_flipchip.html  design_multiplanar.html  design_planar.html  interface_components.html  net_info.html
_modules/qiskit_metal/qgeometries/: qgeometries_handler.html
_modules/qiskit_metal/toolbox_metal/: about.html  bounds_for_path_and_poly_tables.html  exceptions.html  import_export.html  layer_stack_handler.html  math_and_overrides.html  parsing.html
_modules/shapely/: ops.html
apidocs/: analyses.html  designs.html  gui.html  qgeometries.html  qiskit_metal._gui.MetalGUI.html  qiskit_metal.analyses.EPRanalysis.html  qiskit_metal.analyses.EigenmodeSim.html  qiskit_metal.analyses.HO_wavefunctions.html  qiskit_metal.analyses.Hcpb.html  qiskit_metal.analyses.Hcpb_analytic.html  qiskit_metal.analyses.LOManalysis.html  qiskit_metal.analyses.LumpedElementsSim.html  qiskit_metal.analyses.QAnalysis.html  qiskit_metal.analyses.QSimulation.html  qiskit_metal.analyses.ScatteringImpedanceSim.html  qiskit_metal.analyses.Sweeper.html  qiskit_metal.analyses.cpw_calculations.html  qiskit_metal.analyses.kappa_calculation.html  qiskit_metal.analyses.lumped_capacitive.html  qiskit_metal.analyses.transmon_analytics.html  qiskit_metal.designs.Components.html  qiskit_metal.designs.DesignFlipChip.html  qiskit_metal.designs.DesignPlanar.html  qiskit_metal.designs.MultiPlanar.html  qiskit_metal.designs.QDesign.html  qiskit_metal.designs.QNet.html  qiskit_metal.qgeometries.QGeometryTables.html  qiskit_metal.qlibrary.BaseQubit.html  qiskit_metal.qlibrary.Cap3Interdigital.html  qiskit_metal.qlibrary.CapNInterdigital.html  qiskit_metal.qlibrary.CapNInterdigitalTee.html  qiskit_metal.qlibrary.CircleCaterpillar.html  qiskit_metal.qlibrary.CircleRaster.html  qiskit_metal.qlibrary.CoupledLineTee.html  qiskit_metal.qlibrary.LaunchpadWirebond.html  qiskit_metal.qlibrary.LaunchpadWirebondCoupled.html  qiskit_metal.qlibrary.LaunchpadWirebondDriven.html  qiskit_metal.qlibrary.LineTee.html  qiskit_metal.qlibrary.NGon.html  qiskit_metal.qlibrary.NSquareSpiral.html  (+67 more)
circuit-examples/: index.html
circuit-examples/A.Qubits/: 01-Transmon_cross.html  02-Transmon_floating.html  03-concentric_transmon.html  04-Interdigitated_Transmon.html  05-Transmon_cross_fl.html  06-Transmon_floating_6.html  07-Transmon_floating_cl.html  08-JJ-Dolan.html  09-JJ-Manhattan.html  10-Transmon_floating_teeth.html  11-Star_shaped_qubit.html
circuit-examples/B.Resonators/: 11-Resonator_Meander.html
circuit-examples/C.Composite-bi-partite/: 21-OneTransmonsWithMeanderAndOTG.html
circuit-examples/D.Qubit-couplers/: 31-TwoCrossmonsTunableCoupler.html  32-TwoTransmonsDirectCoupling.html  33-TwoTransmonsWithMeander.html
circuit-examples/E.Input-output-coupling/: 41-LaunchPad.html  42-ResonatorAndLaunchPad.html  43-TransmonPocketCL.html
circuit-examples/F.Small-quantum-chips/: 51-Four_qubit_chip.html
circuit-examples/full-design-flow-examples/: Example-full-chip-design.html  Example-used-in-the-launch-video.html  Exercise-for-the-South-Korea-Hackathon'20.html
qiskit_metal/: __init__.py  config.py
qiskit_metal/analyses/quantization/: lumped_oscillator_model.py
qiskit_metal/designs/: design_base.py
qiskit_metal/renderers/renderer_ansys/: ansys_renderer.py  q3d_renderer.py
qiskit_metal/renderers/renderer_mpl/: mpl_headless.py  mpl_toolbox.py
qiskit_metal/tests/: test_designs.py
tut/: index.html
tut/1-Overview/: 1.1-Bird's-eye-view-of-Qiskit-Metal.html  1.2-Quick-start.html  1.3-Saving-Your-Chip-Design.html
tut/2-From-components-to-chip/: 2.01-How-to-use-a-QComponent.html  2.02-How-to-copy-a-QComponent.html  2.11-Routing-101.html  2.12-Simple-Meander.html  2.13-Hybrid-Auto-and-AStar.html  2.14-Get-them-all-with-MixedRoute.html  2.21-Design-a-4-qubit-full-chip.html  2.22-Design-100-qubits-programmatically.html  2.23-Modify-chip-options.html  2.31-Create-a-QComponent-Basic.html  2.32-Create-a-QComponent-Advanced.html  2.33-Add-my-QComponent-to-a-reusable-python-file.html
tut/3-Renderers/: 3.1-Introduction-to-QRenderers.html  3.2-Export-your-design-to-GDS.html  3.3-Render-your-design-to-Ansys.html  3.4-How-do-I-make-my-custom-QRenderer.html
tut/4-Analysis/: 4.01-Capacitance-and-LOM.html  4.02-Eigenmode-and-EPR.html  4.03-Impedance.html  4.11-Analyze-and-tune-a-transmon.html  4.12-Analyze-a-resonator.html  4.13-Analyze-transmon-and-resonator.html  4.14-Analyze-a-double-hanger-resonator.html  4.15-CPW-kappa-calculation.html  4.21-Capacitance-matrix.html  4.22-Eigenmode-matrix.html  4.23-Impedance-and-scattering-Z-S-Y-matrices.html  4.31-Plot-quantum-oscillator-wavefunction.html  4.32-Transmon-analytics-HCPB.html  4.33-Transmon-analytics.html  4.34-Transmon-qubit-CPB-hamiltonian-charge-basis.html
tut/quick-topics/: JJ-Demo-Notebook.html  Managing-pins.html  Managing-variables.html  Opening-documentation.html  QComponent-3-fingers-capacitor.html  QComponent-Interdigitated-transmon.html
tutorials/1 Overview/: 1.2 Quick start.ipynb
tutorials/3 Renderers/: 3.3 Render your design to Ansys.ipynb
tutorials/4 Analysis/A. Core - EM and quantization/: 4.01 Capacitance and LOM.ipynb  4.02 Eigenmode and EPR.ipynb  4.03 Impedance.ipynb  4.04 New LOM and Fluxonium Example.ipynb  4.05 New LOM and Two Coupled Transmon Example.ipynb
(+82 files in other folders)
