[project]
name = "qiskit_metal"
description = "Qiskit Metal | for quantum device design & analysis"
authors = [
    { name = "Qiskit Metal Development Team", email = "qiskit@us.ibm.com" },
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
]
keywords = [ "eda", "qiskit", "quantum", "sdk" ]
license = "Apache-2.0"
license-files = [ "LICENSE.txt" ]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10,<=3.11"
urls = { bugtracker = "https://github.com/Qiskit/qiskit-metal/issues", documentation = "https://qiskit-community.github.io/qiskit-metal/", source = "https://github.com/Qiskit/qiskit-metal" }
version = "0.5.0"
dependencies = [
    "addict>=2.4.0",
    "gdstk>=0.9",
    "geopandas>=0.12.2",
    "matplotlib>=3.7.0",
    "numpy>=1.24.2,<2",
    "pandas>=1.5.3",
    "pint~=0.20.1",
    "pyEPR-quantum>=0.9.0",
    "pygments>=2.14.0",
    "pyside6>=6.9.0",
    "qdarkstyle~=3.1",
    "qutip>=4.7.1",
    "scipy>=1.10.0",
    "shapely~=2.0.1",
    "scqubits>=3.1.0,<=3.4.0",
    "gmsh~=4.11.1",
    "pyaedt>=0.6.46,<0.10.0; platform_system == 'Windows'",
    "pyyaml>=6.0",
    "cython<3.0.0",
]

[build-system]
build-backend = "hatchling.build"
requires      = [ "hatchling" ]

[tool.pixi.workspace]
channels  = [ "conda-forge" ]
platforms = [ "linux-64", "osx-64", "win-64", "osx-arm64" ]

[tool.pixi.tasks]

[tool.pixi.dependencies]

[tool.pixi.pypi-dependencies]
qiskit-metal = { path = ".", editable = true }

[tool.pixi.feature]
jupyter = { dependencies = { jupyter = "*", ipywidgets = "*" }, tasks = { jlab = { cmd = "jupyter lab" } } }
test    = { pypi-dependencies = { pytest = "~=7.2.1", pytest-rich = ">=0.2.0" }, tasks = { test = { cmd = "pytest --rich qiskit_metal/tests/", env = { LANGUAGE = "en_US", QISKIT_METAL_HEADLESS = "1", LC_ALL = "en_US.utf-8" } } } }
lint    = { dependencies = { pylint = "~=2.16.2", yapf = ">=0.32.0", ruff = ">=0.11.10,<0.12" }, tasks = { lint = { cmd = "yapf --diff --recursive --style .style.yapf qiskit_metal", cwd = "." } } }
docs    = { pypi-dependencies = { sphinx = ">=6.0.0", numpydoc = ">=1.5.0", nbsphinx = ">=0.8.6", qiskit-sphinx-theme = "~=1.16.0", sphinx-intl = "~=2.1.0" } }

[tool.pixi.environments]
test      = { features = [ "test" ], solve-group = "test" }
notebooks = { features = [ "jupyter" ] }
docs      = { features = [ "docs" ] }
lint      = { features = [ "lint" ], no-default-feature = true }
